# minimax

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/anthropic/: Cargo.toml
crates/anthropic/src/: client.rs  error.rs  lib.rs  types.rs
crates/minimax/: Cargo.toml  README.md
crates/minimax/src/: main.rs
crates/modbus_agent/: Cargo.toml
crates/modbus_agent/src/: executor.rs  main.rs  tools.rs
crates/openai/: Cargo.toml
crates/openai/src/: chat.rs  client.rs  error.rs  lib.rs  types.rs
docs/: 工具调用.MD
docs/Anthropic 兼容/: 文本对话（Anthropic API 兼容）.MD  获取单个模型详情.MD  获取模型列表.MD
docs/OpenAI 兼容/: 文本对话（OpenAI API 兼容）.MD  获取单个模型详情.MD  获取模型列表.MD
docs/superpowers/plans/: 2026-05-10-anthropic-support-implementation.md  2026-05-10-minimax-rust-sdk-implementation.md  2026-05-10-workspace-restructuring-implementation.md  2026-05-11-tool-executor-implementation.md
docs/superpowers/specs/: 2026-05-10-minimax-anthropic-support-design.md  2026-05-10-minimax-rust-sdk-design.md  2026-05-10-workspace-restructuring-design.md  2026-05-11-tool-executor-design.md  2026-05-13-modbus-agent-design.md
