[package]
name = "minimax"
version.workspace = true
edition.workspace = true

[[bin]]
name = "minimax"
path = "src/main.rs"

[dependencies]
openai = { path = "../openai" }
anthropic = { path = "../anthropic" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
